--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="background">#2961B4</color>
+    <color name="primary">#81DAF8</color>
+    <color name="secondary">#3D9ABA</color>
+    <color name="textColor">#001D27</color>
 </resources>
