--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
     <color name="white">#FFFFFFFF</color>
 
 
-    <color name="background">#2961B4</color>
+    <color name="background">#3D9ABA</color>
     <color name="primary">#81DAF8</color>
-    <color name="secondary">#3D9ABA</color>
+    <color name="secondary">#2961B4</color>
     <color name="textColor">#001D27</color>
 </resources>
