--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondary"
+    android:background="@drawable/background"
     tools:context="screens.LoginActivity">
 
 
@@ -45,16 +45,18 @@
                 android:layout_marginTop="16dp"
                 android:text="البريد الالكتروني" />
 
-            <EditText
-                android:id="@+id/etEmail"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="ادخل بريدك الالكتروني"
-                android:inputType="textEmailAddress" />
+                android:layout_marginVertical="5dp"
 
+                android:hint="البريد الالكتروني">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
@@ -62,15 +64,19 @@
                 android:layout_marginTop="16dp"
                 android:text="كلمة السر" />
 
-            <EditText
-                android:id="@+id/etPassword"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="ادخل كلمة السر"
-                android:inputType="textPassword" />
+                android:layout_marginVertical="5dp"
+                android:hint="كلمة السر"
+                app:endIconMode="password_toggle">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/textView7"
