--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -211,6 +211,7 @@
             android:layout_marginBottom="4dp"
             android:background="@drawable/blue_button_background"
             android:text="التالي"
+            android:onClick="toVerifyOTP"
             android:layout_weight="1"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
