--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -64,7 +64,7 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:hint="ادخل البريد الالكتروني"
-                            android:inputType="phone"
+                            android:inputType="textEmailAddress"
                             android:maxLength="1"
                             android:padding="12dp"
                             android:textAlignment="center"
