--- a/app/src/main/res/layout/activity_illnesses.xml
+++ b/app/src/main/res/layout/activity_illnesses.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="screens.IllnessesActivity">
+    tools:context="user_screens.IllnessesActivity">
 
     <TextView
         android:id="@+id/textView17"
