--- a/app/src/main/res/layout/activity_otpactivity.xml
+++ b/app/src/main/res/layout/activity_otpactivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="screens.OTPActivity">
+    tools:context="user_screens.OTPActivity">
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
