--- a/app/src/main/res/layout/fragment_test2.xml
+++ b/app/src/main/res/layout/fragment_test2.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#987"
-    tools:context="doctor_screens.doctor_fragments.FragmentTest2">
+    tools:context="doctor_screens.doctor_fragments.FragmentHome">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
