--- a/app/src/main/res/layout/activity_medical_records.xml
+++ b/app/src/main/res/layout/activity_medical_records.xml
@@ -201,6 +201,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:onClick="toAddRecord"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_add_24" />
