--- a/app/src/main/res/layout/activity_otpactivity.xml
+++ b/app/src/main/res/layout/activity_otpactivity.xml
@@ -29,6 +29,7 @@
                     android:layout_width="210dp"
                     android:layout_height="210dp"
                     android:layout_gravity="center"
+                    android:src="@drawable/a_medical_prescription_pana"
                    />
 
                 <TextView
