--- a/app/src/main/res/layout/activity_sign_up_user.xml
+++ b/app/src/main/res/layout/activity_sign_up_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="user_screens.SignUpActivity">
+    tools:context="user_screens.SignUpUserActivity">
 
 
     <TextView
@@ -57,6 +57,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/etName"
                         android:inputType="textPersonName" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -73,6 +74,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/etPhone"
                         android:inputType="phone" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -87,6 +89,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
+                        android:id="@+id/etEmail"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -101,6 +104,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
+                        android:id="@+id/etPassword"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword" />
 
@@ -117,10 +121,36 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
+                        android:id="@+id/etSSN"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <!-- Inside text input layout add
+                        an auto complete text view
+                            and make its input type to none-->
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteTextView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:inputType="none"
+                        android:text="اختيار الجنس" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+
 
                 <TextView
                     android:id="@+id/textView13"
@@ -144,8 +174,7 @@
                     android:orientation="horizontal">
 
 
-                    <!--Create a TextInputLayout and choose the style,
-                        for now we are choosing the OutlinedBox ExposedDropdownMenu -->
+
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                         android:layout_width="wrap_content"
@@ -191,6 +220,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
@@ -203,6 +233,7 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
@@ -211,11 +242,12 @@
             android:layout_marginBottom="4dp"
             android:background="@drawable/blue_button_background"
             android:text="التالي"
-            android:onClick="toVerifyOTP"
+            android:onClick="toOTP"
             android:layout_weight="1"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
     </LinearLayout>
 
 
