--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -130,6 +130,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="اضافة السجل"
+        android:onClick="addRecord"
         android:paddingVertical="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
