--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -115,7 +115,7 @@
          app:layout_constraintStart_toStartOf="@+id/linearLayout4">
 
          <com.google.android.material.textfield.TextInputEditText
-             android:id="@+id/etEnterCustomerAdditionalNotes"
+             android:id="@+id/etDiseaseName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="4"
