--- a/app/src/main/res/layout/activity_add_medic.xml
+++ b/app/src/main/res/layout/activity_add_medic.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context="user_screens.AddMedicActivity">
 
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="اضافة دواء"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
