--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -60,7 +60,7 @@
                         android:background="#f6f6f6">
 
                         <EditText
-                            android:id="@+id/otp_box_2"
+                            android:id="@+id/etEmail"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@null"
