--- a/app/src/main/res/layout/activity_add_disease.xml
+++ b/app/src/main/res/layout/activity_add_disease.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView26">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etDiseaseName"
+            android:id="@+id/etMedicName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="4"
