--- a/app/src/main/res/layout/activity_diseases.xml
+++ b/app/src/main/res/layout/activity_diseases.xml
@@ -41,6 +41,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:id="@+id/recyclerView"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
