--- a/app/src/main/res/layout/activity_medical_records.xml
+++ b/app/src/main/res/layout/activity_medical_records.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:onClick="toShowRecords1"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
             app:cardCornerRadius="20dp">
@@ -88,6 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:onClick="toShowRecords2"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
             app:cardCornerRadius="20dp">
@@ -140,7 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-
+            android:onClick="toShowRecords3"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
             app:cardCornerRadius="20dp">
